<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TimeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.TimeFragment">

    <TextView
        android:id="@+id/tvTitleTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Time"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarTime"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="48dp"
        android:text="@string/btnBuscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTime" />

    <EditText
        android:id="@+id/etCodigoTime"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="26dp"
        android:ems="10"
        android:hint="@string/etCodigo"
        android:inputType="numberSigned"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleTime" />

    <EditText
        android:id="@+id/etNomeTime"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/etNome"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscarTime" />

    <EditText
        android:id="@+id/etCidadeTime"
        android:layout_width="316dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/etCidade"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeTime" />

    <Button
        android:id="@+id/btnInserirTime"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:text="@string/btnInserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <Button
        android:id="@+id/btnModificarTime"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:text="@string/btnModificar"
        app:layout_constraintStart_toEndOf="@+id/btnExcluirTime"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <Button
        android:id="@+id/btnExcluirTime"
        android:layout_width="92dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:text="@string/btnExcluir"
        app:layout_constraintStart_toEndOf="@+id/btnInserirTime"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <Button
        android:id="@+id/btnListarTime"
        android:layout_width="85dp"
        android:layout_height="48dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="35dp"
        android:text="@string/btnListar"
        app:layout_constraintStart_toEndOf="@+id/btnModificarTime"
        app:layout_constraintTop_toBottomOf="@+id/etCidadeTime" />

    <TextView
        android:id="@+id/tvListagemTime"
        android:layout_width="316dp"
        android:layout_height="232dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInserirTime" />
</androidx.constraintlayout.widget.ConstraintLayout>